# vdt

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  ReadMe.md  flake.nix
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/vdt/: stdwrap.h
test/: CMakeLists.txt
test/source/: vdt_test.cpp
